[EDP-DDM-0000] Fix dashboards for OKD 4.10
Change-Id: Iba1c733f9064e2ca3598746df244047d759a5c98

--- a/deploy-templates/grafana/values.yaml
+++ b/deploy-templates/grafana/values.yaml
@@ -151,6 +151,8 @@ dashboardsProvider:
 ##     fileName: myotherdashboard.json
 ##
 dashboardsConfigMaps:
+  - configMapName: grafana-dashboard-cluster-total
+    fileName: cluster-total.json
   - configMapName: grafana-dashboard-etcd
     fileName: etcd.json
   - configMapName: grafana-dashboard-k8s-resources-cluster
