--- a/deploy-templates/dashboards/grafana-dashboard-namespace-by-pod.yaml
+++ b/deploy-templates/dashboards/grafana-dashboard-namespace-by-pod.yaml
@@ -1,4 +1,7 @@
+kind: ConfigMap
 apiVersion: v1
+metadata:
+  name: grafana-dashboard-namespace-by-pod
 data:
   namespace-by-pod.json: |-
     {
@@ -1258,7 +1261,7 @@ data:
                         "value": "default"
                     },
                     "hide": 0,
-                    "label": null,
+                    "label": "Data Source",
                     "name": "datasource",
                     "options": [
 
@@ -1282,8 +1285,8 @@ data:
                     "options": [
 
                     ],
-                    "query": "label_values(kube_pod_info, cluster)",
-                    "refresh": 1,
+                    "query": "label_values(up{job=\"kubelet\", metrics_path=\"/metrics/cadvisor\"}, cluster)",
+                    "refresh": 2,
                     "regex": "",
                     "sort": 0,
                     "tagValuesQuery": "",
@@ -1314,7 +1317,7 @@ data:
 
                     ],
                     "query": "label_values(container_network_receive_packets_total{cluster=\"$cluster\"}, namespace)",
-                    "refresh": 1,
+                    "refresh": 2,
                     "regex": "",
                     "skipUrlSync": false,
                     "sort": 1,
@@ -1439,31 +1442,5 @@ data:
         },
         "timezone": "UTC",
         "title": "Kubernetes / Networking / Namespace (Pods)",
-        "uid": "8b7a8b326d7a6f1f04244066368c67af",
         "version": 0
     }
-kind: ConfigMap
-metadata:
-  annotations:
-    include.release.openshift.io/ibm-cloud-managed: "true"
-    include.release.openshift.io/self-managed-high-availability: "true"
-    include.release.openshift.io/single-node-developer: "true"
-  creationTimestamp: null
-  managedFields:
-  - apiVersion: v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:data:
-        .: {}
-        f:namespace-by-pod.json: {}
-      f:metadata:
-        f:annotations:
-          .: {}
-          f:include.release.openshift.io/ibm-cloud-managed: {}
-          f:include.release.openshift.io/self-managed-high-availability: {}
-          f:include.release.openshift.io/single-node-developer: {}
-    manager: operator
-    operation: Update
-    time: "2021-05-17T12:02:56Z"
-  name: grafana-dashboard-namespace-by-pod
-  selfLink: /api/v1/namespaces/openshift-monitoring/configmaps/grafana-dashboard-namespace-by-pod
