--- a/deploy-templates/dashboards/grafana-dashboard-pod-total.yaml
+++ b/deploy-templates/dashboards/grafana-dashboard-pod-total.yaml
@@ -1,4 +1,7 @@
+kind: ConfigMap
 apiVersion: v1
+metadata:
+  name: grafana-dashboard-pod-total
 data:
   pod-total.json: |-
     {
@@ -990,7 +993,7 @@ data:
                         "value": "default"
                     },
                     "hide": 0,
-                    "label": null,
+                    "label": "Data Source",
                     "name": "datasource",
                     "options": [
 
@@ -1014,8 +1017,8 @@ data:
                     "options": [
 
                     ],
-                    "query": "label_values(kube_pod_info, cluster)",
-                    "refresh": 1,
+                    "query": "label_values(up{job=\"kubelet\", metrics_path=\"/metrics/cadvisor\"}, cluster)",
+                    "refresh": 2,
                     "regex": "",
                     "sort": 0,
                     "tagValuesQuery": "",
@@ -1046,7 +1049,7 @@ data:
 
                     ],
                     "query": "label_values(container_network_receive_packets_total{cluster=\"$cluster\"}, namespace)",
-                    "refresh": 1,
+                    "refresh": 2,
                     "regex": "",
                     "skipUrlSync": false,
                     "sort": 1,
@@ -1078,7 +1081,7 @@ data:
 
                     ],
                     "query": "label_values(container_network_receive_packets_total{cluster=\"$cluster\",namespace=~\"$namespace\"}, pod)",
-                    "refresh": 1,
+                    "refresh": 2,
                     "regex": "",
                     "skipUrlSync": false,
                     "sort": 1,
@@ -1203,31 +1206,5 @@ data:
         },
         "timezone": "UTC",
         "title": "Kubernetes / Networking / Pod",
-        "uid": "7a18067ce943a40ae25454675c19ff5c",
         "version": 0
     }
-kind: ConfigMap
-metadata:
-  annotations:
-    include.release.openshift.io/ibm-cloud-managed: "true"
-    include.release.openshift.io/self-managed-high-availability: "true"
-    include.release.openshift.io/single-node-developer: "true"
-  creationTimestamp: null
-  managedFields:
-  - apiVersion: v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:data:
-        .: {}
-        f:pod-total.json: {}
-      f:metadata:
-        f:annotations:
-          .: {}
-          f:include.release.openshift.io/ibm-cloud-managed: {}
-          f:include.release.openshift.io/self-managed-high-availability: {}
-          f:include.release.openshift.io/single-node-developer: {}
-    manager: operator
-    operation: Update
-    time: "2021-05-17T12:02:56Z"
-  name: grafana-dashboard-pod-total
-  selfLink: /api/v1/namespaces/openshift-monitoring/configmaps/grafana-dashboard-pod-total
