[EDP-DDM-13401] Add redis dashboard
Change-Id: Ie1d8d6d765f143f095ffc2b6a7f58cf49c370e3c

--- a/deploy-templates/grafana/values.yaml
+++ b/deploy-templates/grafana/values.yaml
@@ -207,6 +207,8 @@ dashboardsConfigMaps:
     fileName: postgresql_service_health.json
   - configMapName: grafana-dashboard-crunchy-query-statistics
     fileName: query_statistics.json
+  - configMapName: grafana-dashboard-redis
+    fileName: redis.json
 
 ##  - configMapName: grafana-dashboard-cluster-total
 ##    fileName: grafana-dashboard-cluster-total.json
