[EDP-DDM-21173] Add annotation for back up pvc in vSphere.
Change-Id: Ie6de9d9935a0d4c871b550516f7e576ad120389f

--- a/deploy-templates/grafana/templates/deployment.yaml
+++ b/deploy-templates/grafana/templates/deployment.yaml
@@ -18,6 +18,9 @@ spec:
       labels: {{- include "common.labels.standard" . | nindent 8 }}
         app.kubernetes.io/component: grafana
       annotations:
+        {{- if ne .Values.cloudProvider "AWS" }}
+        backup.velero.io/backup-volumes: data
+        {{- end }}
         {{- if (include "grafana.createAdminSecret" .) }}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
         {{- end }}
