[EDP-DDM-23781] added camunda metrics dashboard
Change-Id: I1edee84723ce0bf3bc37887c7de0cd70c7f822b2

--- a/deploy-templates/grafana/values.yaml
+++ b/deploy-templates/grafana/values.yaml
@@ -209,6 +209,8 @@ dashboardsConfigMaps:
     fileName: query_statistics.json
   - configMapName: grafana-dashboard-redis
     fileName: redis.json
+  - configMapName: grafana-dashboard-camunda-metrics
+    fileName: camunda-metrics.json
 
 ##  - configMapName: grafana-dashboard-cluster-total
 ##    fileName: grafana-dashboard-cluster-total.json
