--- a/deploy-templates/grafana/values.yaml
+++ b/deploy-templates/grafana/values.yaml
@@ -635,3 +635,8 @@ keycloak:
   clientName: grafana
   secretName: grafana-keycloak-client
   realm: openshift
+
+edpComponent:
+  description: "Візуалізація та надання доступу до даних моніторингу"
+  displayName: "Веб-інтерфейс моніторингу Платформи (Grafana)"
+  operationalZone: "platform-operational-zone"
