[EDP-DDM-26341] Add public API kong dashboard
Change-Id: Iabe03cc4a5d63446fd304fee9d35eed50e07e2cd

--- a/deploy-templates/grafana/values.yaml
+++ b/deploy-templates/grafana/values.yaml
@@ -211,6 +211,8 @@ dashboardsConfigMaps:
     fileName: redis.json
   - configMapName: grafana-dashboard-camunda-metrics
     fileName: camunda-metrics.json
+  - configMapName: grafana-dashboard-kong-public-api
+    fileName: grafana-dashboard-kong-public-api.json
 
 ##  - configMapName: grafana-dashboard-cluster-total
 ##    fileName: grafana-dashboard-cluster-total.json
