--- a/deploy-templates/openshift-monitoring/templates/cluster-monitoring-config.yaml
+++ b/deploy-templates/openshift-monitoring/templates/cluster-monitoring-config.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: openshift-monitoring
 data:
   config.yaml: |
+    telemeterClient:
+      enabled: false
     prometheusK8s:
       retention: 168h
       logLevel: error
