[EDP-DDM-28174] Changed EDPComponents description
Change-Id: Ibf8a8700279395c45de6a585504acab7f665a20b

--- a/deploy-templates/grafana/values.yaml
+++ b/deploy-templates/grafana/values.yaml
@@ -639,6 +639,6 @@ keycloak:
   realm: openshift
 
 edpComponent:
-  description: "Візуалізація та надання доступу до даних моніторингу"
+  description: "Візуалізація та надання доступу до даних моніторингу."
   displayName: "Веб-інтерфейс моніторингу Платформи (Grafana)"
   operationalZone: "platform-operational-zone"
